Fixed issues mentioned in previous commit and rewrote the nav overlay to use css flex box and grid
fixed issues mentioned in previous commit and rewrote the nav overlay to use CSS flex box and grid
that means the the `input type="checkbox"` is invisible and the theme switching still works though the theme switcher in the nav bar
I also made the CSS more efficient and smaller by combining several CSS classes and combining them were they could be in test.css
as mentioned above I re-wrote the nav overlay that pop's up when you click on the nav bottom in the nav bar to use css grids for the layout and css flexbox to center the close button and spread out the links to other pages
non of these styles are final.

--- a/docs/CSS/NAVbar_test.css
+++ b/docs/CSS/NAVbar_test.css
@@ -4,58 +4,67 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
-.overlay {
-	height: 100%;
-	width: 0;
-	position: fixed;
-	z-index: 10;
-	top: 0;
-	left: 0;
-	background-color: var(--partially_transparent);
-	overflow-x: hidden;
-	transition: 0.5s;
-}
-
-.overlay_content {
-	position: relative;
-	top: 25%;
-	width: 100%;
-	text-align: center;
-	margin-top: 30px;
-}
-
-.overlay a {
-	padding: 10px;
-	text-decoration: none;
-	font-size: 36px;
-	color: var(--text_secondary);
-	display: block;
-	transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-	color: var(--text-color);;
-}
-
-.overlay .closebtn {
-	position: absolute;
-	top: 20px;
-	right: 45px;
-	font-size: 60px;
-}
-
-@media screen and (max-height: 500px) {
-	.overlay a {font-size: 20px}
-	.overlay .closebtn {
-		font-size: 40px;
-		top: 15px;
-		right: 35px;
-	}
-}
-
 .nav_activate{
 	font-size: 20px;
 	cursor: pointer;
 	color: var(--text-color);
-	z-index: 50;
+	z-index: 5;
 }
+
+.overlay {
+	position: fixed;
+	z-index: 10;
+	top: 0;
+	left: 0;
+	display: grid;
+	grid-template-columns: 1fr 4fr 1fr;
+	grid-template-rows: 1fr 4fr 1fr;
+	gap: 0px 0px;
+	width: 0;
+	height: 100vh;
+	background-color: var(--partially_transparent);
+	overflow-x: hidden;
+	transition: 0.5s;
+  }
+  
+.closebtn_area {
+	display: grid;
+	grid-template-columns: 1fr 4fr 1fr;
+	grid-template-rows: repeat(3, 1fr);
+	gap: 0px 0px;
+	grid-area: 1 / 1 / 2 / 4;
+}
+  
+.closebtn { 
+	grid-area: 1 / 3 / 4 / 4; 
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	flex-wrap: nowrap;
+}
+  
+.overlay_content { 
+	grid-area: 2 / 2 / 3 / 3; 
+	display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+	flex-wrap: nowrap;
+}
+
+.overlay_content a,.closebtn a{
+	font-size: 2.5em;
+	text-decoration: none;
+	color: var(--text_secondary);
+	transition: 0.3s;
+}
+
+.overlay_content a:hover, .overlay_content a:focus {
+	color: var(--text-color);;
+}
+
+.closebtn a:hover, .closebtn a:focus {
+	color: var(--text-color);;
+}
+
